<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.MainActivity">
    <LinearLayout
        android:id="@+id/identifierView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:textAlignment="center"
        android:paddingStart="8dp"
        android:visibility="gone"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:paddingTop="15sp"
            android:text="@string/welcomeApp"
            android:paddingEnd="8sp"
            android:textStyle="bold"
            android:textSize="35sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:paddingTop="30sp"
            android:text="@string/instructions"
            android:textStyle="italic"
            android:textSize="24sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:paddingTop="30sp"
            android:text="@string/user"
            android:textStyle="bold"
            android:textSize="24sp"/>
        <EditText
            android:id="@+id/userNameText"
            android:layout_width="130sp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:paddingTop="5sp"
            android:inputType="text"
            android:textStyle="italic"
            android:textSize="26sp"
            android:text="" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:paddingTop="30sp"
            android:text="@string/zipCode"
            android:textStyle="bold"
            android:textSize="24sp"/>
        <EditText
            android:id="@+id/userZipCodeText"
            android:layout_width="130sp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:paddingTop="5sp"
            android:inputType="text"
            android:textStyle="italic"
            android:textSize="26sp"
            android:text="" />
        <Button
            android:id="@+id/addButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:text="@string/save"
            android:textSize="35sp"
            android:layout_gravity="center_horizontal"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/helloUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:paddingTop="30sp"
            android:text="@string/welcome"
            android:paddingStart="8sp"
            android:textStyle="bold"
            android:textSize="24sp"/>
        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:paddingTop="30sp"
            android:paddingStart="3sp"
            android:textStyle="bold"
            android:textSize="24sp"/>
    </LinearLayout>


    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>